--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "url": "https://github.com/likr/influencer-network.git"
   },
   "scripts": {
-    "build": "NODE_ENV=production webpack",
-    "start": "webpack-dev-server",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development",
     "deploy": "npm run build && gh-pages -d public"
   },
   "dependencies": {
@@ -22,7 +22,7 @@
   "devDependencies": {
     "gh-pages": "^1.2.0",
     "webpack": "^4.10.2",
-    "webpack-cli": "^3.0.0",
+    "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.4"
   }
 }
