--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "@webcomponents/custom-elements": "^1.0.0",
+    "bulma": "^0.7.1",
     "d3": "^4.13.0",
     "eg-renderer": "git+https://github.com/likr/eg-renderer-canvas.git",
     "eg-renderer-ogdf": "git+https://github.com/likr/eg-renderer-ogdf.git"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^4.5.1",
     "gh-pages": "^1.2.0",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.5",
